--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         ReactDOM.createRoot(document.getElementById("root")).render(<GpaCalculator />);
     </script>
     <footer>
-        <p>&copy; 2025 <a href="https://www.codl.lk/">BIT</a> | Developed by BIT Students</a></p>
+        <p>&copy; 2025 <a href="https://www.codl.lk/">BIT</a> | Developed by Chamathka Nethmini</a></p>
     </footer>
 </body>
 </html>
